plugins {
	id 'java'
	id("org.springframework.boot") version "2.7.16"
	id("io.spring.dependency-management") version "1.1.4"
}

group = 'JavaProject'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	//jwt
	implementation("io.jsonwebtoken:jjwt:0.9.1")


	//기본
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework:spring-context'

	//이메일 전송
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.530'

}

jar {
	manifest {
		attributes(
				'Main-Class': 'main.java.com.example.demu.DemuApplication'
		)
	}
}

           tasks.named('test') {
	useJUnitPlatform()
}
